fix more daos for new descriptor queries